--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Devcrud">
     <title>IMANE JAAFAR page | Free Bootstrap 4.3.x landing page</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
-	<link rel="stylesheet" href="assets/css/johndoe.css">
+	<link rel="stylesheet" href="johndoe.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
    
